# U-Backend-Electro

./: .gitignore  .stylelintrc.json  README.md  main.py  package.json  pyproject.toml  requeriments.txt  serial_server.py  server.py
arduino/: main.ino  test-hardware.ino
arduino/main/: main.ino
arduino/test-hardware/: test-hardware.ino
frontend/: bun.lockb  index.html  package.json  script.js  style.css
parking/: __main__.py  image.py  ocr.py  plate.py  services.py
parking/static/: script.js  socket.io.min.js  style.css
parking/templates/: home.html  pdf.html
test/: serial_test.py
